--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-#
 # JDBC properties
-#
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:24421/railway
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:51695/railway
 spring.datasource.username=root
-spring.datasource.password=RzGSbiPfAwhqWRIMVZOqVTwufcPWLxwg
+spring.datasource.password=iEzGQWyDRLPVQUPtvXOkNOvNIJKvGyXG
